--- a/side_bar.html
+++ b/side_bar.html
@@ -1,6 +1,6 @@
 <section>
     <header>
-        <h3><a href="#">Upcoming Events</a></h3>
+        <h3><a href="http://www.olasuchicago.org/events.html#upcoming">Upcoming Events</a></h3>
     </header>
     <p>
         Thank you to our members for supporting all our events!
@@ -50,7 +50,7 @@
     </div>
     <div class="row 50%">
         <div class="4u">
-            <a href="#" class="image fit"><img src="http://www.olasuchicago.org/img/sidebar" alt="Marketing" /></a>
+            <a href="http://www.olasuchicago.org/img/show/flyer.png" class="image fit"><img src="http://www.olasuchicago.org/img/show/flyer.png" alt="Marketing" /></a>
         </div>
         <div class="8u">
             <h4>Marketing Committee</h4>
@@ -59,28 +59,6 @@
             </p>    
         </div>
     </div> 
-    <div class="row 50%">
-        <div class="4u">
-            <a href="#" class="image fit"><img src="http://www.olasuchicago.org/img/pic13.jpg" alt="" /></a>
-        </div>
-        <div class="8u">
-            <h4>Photoshoot</h4>
-            <p>
-                We'll be updating events soon!
-            </p>
-        </div>
-    </div>
-    <div class="row 50%">
-        <div class="4u">
-            <a href="#" class="image fit"><img src="http://www.olasuchicago.org/img/pic14.jpg" alt="" /></a>
-        </div>
-        <div class="8u">
-            <h4>Other Events</h4>
-            <p>
-                We'll be updating events soon!
-            </p>
-        </div>
-    </div>
     <footer>
         <a href="http://www.olasuchicago.org/events/index.html#upcoming" class="button">Events page</a>
     </footer>
