--- a/index.html
+++ b/index.html
@@ -60,11 +60,13 @@
                                 <p>
                                     Welcome to OLAS UChicago
                                 </p>
-                                <!-- testing a countdown with javascript -->
-                                <h3><a href="cultural_show/index.html">Premios OLAS Countdown:</a></h3>
-                                <!-- Display the countdown timer in an element -->
-                                <p id="countdown"></p>
-                                <a href="#" class="image featured"><img src="img/show/flyer.png" alt="" /></a>
+                                <div id="countdown_div">
+                                    <!-- testing a countdown with javascript -->
+                                    <h3><a href="cultural_show/index.html">Premios OLAS Countdown:</a></h3>
+                                    <!-- Display the countdown timer in an element -->
+                                    <p id="countdown"></p>
+                                </div>
+                                <a href="img/show/flyer.png" class="image featured"><img src="img/show/flyer.png" alt="" /></a>
                             </header>
                             <section id="story">
                                 <header>
@@ -100,7 +102,7 @@
                             <header>
                                 <h3><a href="about/index.html">About OLAS</a></h3>
                             </header>
-                            <p>
+                            <p class="indent">
                                 We are a student organization that recognizes that cohesiveness and true power comes from diversity. We endeavor to promote awareness, within and beyond the Latino/Latina community, that incorporates all facets of our culture rooted in...
                             </p>
                             <footer>
@@ -116,31 +118,58 @@
                 <hr />
                 <div class="row">
                     <article class="4u 12u(mobile) special">
-                        <a href="#" class="image featured"><img src="img/pic07.jpg" alt="" /></a>
+                        <a href="img/sidebar/meeting.jpg" class="image fit"><img src="img/sidebar/meeting.jpg" alt="" /></a>
                         <header>
-                            <h3><a href="#">Coming Soon! #1</a></h3>
+                            <h3><a href="membership/index.html#meetings">General Meeting</a></h3>
                         </header>
-                        <p>
-                            We'll be updating events soon!
-                        </p>
+                        <div id="meeting" class="main_events">
+                            <p class="indent">
+                                Join us for the second general meeting of the quarter Wednesday February 14th. 
+                            </p>
+                            <p class="indent">
+                                We will be going over information about how to get involved in this year's culture show, whether it be through dancing or   volunteering within various committees! 
+                            </p>
+                            <p> 
+                                <a href="https://www.facebook.com/events/177820689658516/">Join the event here!</a>
+                            </p>
+                        </div>
                     </article>
                     <article class="4u 12u(mobile) special">
-                        <a href="#" class="image featured"><img src="img/pic08.jpg" alt="" /></a>
+                        <a href="http://www.olasuchicago.org/img/sidebar/pic06.jpg" class="image fit"><img src="http://www.olasuchicago.org/img/sidebar/pic06.jpg" alt="PremiosOlas" /></a>
                         <header>
-                            <h3><a href="#">Coming Soon! #2</a></h3>
+                            <h3><a href="cultural_show/index.html#practices">Premios OLAS Practices</a></h3>
                         </header>
-                        <p>
-                            We'll be updating events soon!
-                        </p>
+                        <div id="practices" class="main_events">
+                            <p class="indent">
+                                Remenber to show up to practices, attendance is mandatory! Email your choreographer if you can't make it! Schedule is as follows:
+                            </p>
+                            <h5>Wednesdays @Ida Noyes Basement</h5>
+                            <ul>
+                                <li>Merengue: 5:00-6:00 p.m.</li>
+                                <li>Urbano: 6:00-7:00 p.m.</li>
+                            </ul>
+                            <h5>Fridays @BARS (Bartlett)</h5>
+                            <ul>
+                                <li>Folklorico: 8:30-9:30 p.m.</li>
+                                <li>Samba: 9:30-10:30 p.m.</li>
+                            </ul>
+                            <h5>Saturdays @Ida Noyes Basement</h5>
+                            <ul>
+                                <li>Bachata: 2:00-3:00 p.m.</li>
+                                <li>Salsa: 3:00-4:00 p.m.</li>
+                            </ul>
+                        </div>
                     </article>
                     <article class="4u 12u(mobile) special">
-                        <a href="#" class="image featured"><img src="img/pic09.jpg" alt="" /></a>
+                        <a href="http://www.olasuchicago.org/img/show/flyer.png" class="image fit"><img src="http://www.olasuchicago.org/img/show/flyer.png" alt="Marketing" /></a>
                         <header>
-                            <h3><a href="#">Coming Soon! #3</a></h3>
+                            <h3><a href="cultural_show/index.html#committees">Marketing Committee</a></h3>
                         </header>
-                        <p>
-                            We'll be updating events soon!
-                        </p>
+                        <div class="main_events">
+                            <p class="indent">
+                                If you want to become more involve with OLAS and the planning of our annual cultural show, we hold marketing committee meetings every week and they are open to all members! Feel free to come and give your perspective on events and planning! 
+                            </p>    
+                        </div>
                     </article>
                 </div>
             </div>
@@ -238,18 +267,18 @@
                         </header>
                         <div class="row 25% no-collapse">
                             <div class="6u">
-                                <a href="gallery/img/" class="image fit"><img src="gallery/img/pic01.jpg" alt="" /></a>
+                                <a href="gallery/img/pic01.jpg" class="image fit"><img src="gallery/img/pic01.jpg" alt="" /></a>
                             </div>
                             <div class="6u">
-                                <a href="gallery/img/" class="image fit"><img src="gallery/img/pic02.jpg" alt="" /></a>
+                                <a href="gallery/img/pic02.jpg" class="image fit"><img src="gallery/img/pic02.jpg" alt="" /></a>
                             </div>
                         </div>
                         <div class="row 25% no-collapse">
                             <div class="6u">
-                                <a href="gallery/img/" class="image fit"><img src="gallery/img/pic03.jpg" alt="" /></a>
+                                <a href="gallery/img/pic03.jpg" class="image fit"><img src="gallery/img/pic03.jpg" alt="" /></a>
                             </div>
                             <div class="6u">
-                                <a href="gallery/img/" class="image fit"><img src="gallery/img/pic04.jpg" alt="" /></a>
+                                <a href="gallery/img/pic04.jpg" class="image fit"><img src="gallery/img/pic04.jpg" alt="" /></a>
                             </div>
                         </div>
                     </section>
