--- a/membership/index.html
+++ b/membership/index.html
@@ -82,7 +82,7 @@
                                     <!--This information should be more general and not talk about specific meetings (which should be on the upcomming like I have it-->
 										</header>
                                         <p>MORE GENERAL DESCRIPTION HERE PERHAPS.Our next open meeting for 2017-18 is on Wednesday, February 14th, from 7:00-8:30pm. Location is in Office Multicultural Students Affairs (OMSA) at 5710 South Woodlawn Avenue.</p>
-                                        <p>For our full calendar with up-to-date events and meetings, click <a class="link" href="https://calendar.google.com/calendar/embed?src=olasboard%40gmail.com&ctz=America/Chicago">here</a>.</p>
+                                        <p><a class="link" href="#calendar">Find our full calendar with up-to-date events and meetings at the end of this page!</a>.</p>
 									</section>
                                     <section>
 										<header>
@@ -95,6 +95,9 @@
 											<h3 id="listhost">Join our listhost and receive our Weekly Newsletter!</h3>
 										</header>
 									</section>
+                                    <section id="calendar">
+                                        <iframe src="https://calendar.google.com/calendar/embed?src=olasboard%40gmail.com&ctz=America%2FChicago" style="border: 0" width="60%" height="45%" frameborder="0" scrolling="no"></iframe>
+                                    </section>
 								</article>
 							</div>
                     <!--Sidebar-->
