--- a/events/index.html
+++ b/events/index.html
@@ -73,45 +73,60 @@
 										<header>
 											<h3 id="upcoming">Upcoming Events</h3>
 										</header>
-                                        <p>Events will be updated soon!</p>
-                                        <ul>
-                                            <li id="juan" class="board">
-                                                <img src="img/juan.png" width="200px" />
-                                            </li>
-                                            <li id="dani" class="board">
-                                                <img src="img/dani.jpg" width="200px" />
-                                            </li>
-                                            <li id="nylani" class="board">
-                                                <img src="img/nylani.jpg" width="200px" />
-                                            </li>
-                                            <li id="chema" class="board">
-                                                <img src="img/chema.jpg" width="200px" />
-                                            </li>
-                                            <li id="emma" class="board">
-                                                <img src="img/emma.jpg" width="200px" />
-                                            </li>
-                                            <li id="konrad" class="board">
-                                                <img src="img/konrad.jpg" width="200px" />
-                                            </li>
-                                            <li id="ayling" class="board">
-                                                <img src="img/ayling.jpg" width="200px" />
-                                            </li>
-                                            <li id="berto" class="board">
-                                                <img src="img/berto.jpg" width="200px" />
-                                            </li>
-                                            <li id="kathia" class="board">
-                                                <img src="img/kathia.jpg" width="200px" />
-                                            </li>
-                                            <li id="martina" class="board">
-                                                <img src="img/martina.JPG" width="200px" />
-                                            </li>
-                                            <li id="gabino" class="board">
-                                                <img src="img/gabino.jpg" width="200px" />
-                                            </li>
-                                            <li id="lorenzo" class="board">
-                                                <img src="img/lorenzo.jpg" width="200px" />
-                                            </li>
-                                        </ul>
+                                        <article class="12u(mobile) special">
+                                            <a href="../img/sidebar/meeting.jpg" class="image fit"><img src="../img/sidebar/meeting.jpg" alt="" /></a>
+                                            <header>
+                                                <h3><a href="membership/index.html#meetings">General Meeting</a></h3>
+                                            </header>
+                                            <div id="meeting" class="main_events">
+                                                <p class="indent">
+                                                    Join us for the second general meeting of the quarter Wednesday February 14th. 
+                                                </p>
+                                                <p class="indent">
+                                                    We will be going over information about how to get involved in this year's culture show, whether it be through dancing or   volunteering within various committees! 
+                                                </p>
+                                                <p> 
+                                                    <a href="https://www.facebook.com/events/177820689658516/">Join the event here!</a>
+                                                </p>
+                                            </div>
+                                        </article>
+                                        <article class="12u(mobile) special">
+                                            <a href="http://www.olasuchicago.org/img/sidebar/pic06.jpg" class="image fit"><img src="http://www.olasuchicago.org/img/sidebar/pic06.jpg" alt="PremiosOlas" /></a>
+                                            <header>
+                                                <h3><a href="cultural_show/index.html#practices">Premios OLAS Practices</a></h3>
+                                            </header>
+                                            <div id="practices" class="main_events">
+                                                <p class="indent">
+                                                    Remenber to show up to practices, attendance is mandatory! Email your choreographer if you can't make it! Schedule is as follows:
+                                                </p>
+                                                <h5>Wednesdays @Ida Noyes Basement</h5>
+                                                <ul class="practices">
+                                                    <li>Merengue: 5:00-6:00 p.m.</li>
+                                                    <li>Urbano: 6:00-7:00 p.m.</li>
+                                                </ul>
+                                                <h5>Fridays @BARS (Bartlett)</h5>
+                                                <ul>
+                                                    <li>Folklorico: 8:30-9:30 p.m.</li>
+                                                    <li>Samba: 9:30-10:30 p.m.</li>
+                                                </ul>
+                                                <h5>Saturdays @Ida Noyes Basement</h5>
+                                                <ul>
+                                                    <li>Bachata: 2:00-3:00 p.m.</li>
+                                                    <li>Salsa: 3:00-4:00 p.m.</li>
+                                                </ul>
+                                            </div>
+                                        </article>
+                                        <article class="12u(mobile) special">
+                                            <a href="http://www.olasuchicago.org/img/show/flyer.png" class="image fit"><img src="http://www.olasuchicago.org/img/show/flyer.png" alt="Marketing" /></a>
+                                            <header>
+                                                <h3><a href="cultural_show/index.html#committees">Marketing Committee</a></h3>
+                                            </header>
+                                            <div class="main_events">
+                                                <p class="indent">
+                                                    If you want to become more involve with OLAS and the planning of our annual cultural show, we hold marketing committee meetings every week and they are open to all members! Feel free to come and give your perspective on events and planning! 
+                                                </p>    
+                                            </div>
+                                        </article>
 									</section>
                                     <section>
 										<header>
