--- a/index.html
+++ b/index.html
@@ -62,14 +62,14 @@
                         <a href="http://www.olasuchicago.org/membership/index.html">Members</a>
                         <ul>
                             <li><a href="http://www.olasuchicago.org/membership/index.html#get">Get involved</a></li>
-                            <li><a href="http://www.olasuchicago.org/membership/index.html#member"></a>How to become a member</li>
+                            <li><a href="http://www.olasuchicago.org/membership/index.html#member">How to become a member</a></li>
                         </ul>
                     </li>
                     <li>
                         <a href="http://www.olasuchicago.org/events/index.html">Events</a>
                         <ul>
                             <li><a href="http://www.olasuchicago.org/events/index.html#upcoming">Upcoming events</a></li>
-                            <li><a href="http://www.olasuchicago.org/events/index.html#suggestions"></a>Suggest an event</li>
+                            <li><a href="http://www.olasuchicago.org/events/index.html#suggestions">Suggest an event</a></li>
                         </ul>
                     </li>
                     <li>
