--- a/side_bar.html
+++ b/side_bar.html
@@ -1,6 +1,6 @@
 <section>
     <header>
-        <h3><a href="http://www.olasuchicago.org/events.html#upcoming">Upcoming Events</a></h3>
+        <h3><a href="http://www.olasuchicago.org/events/index.html#upcoming">Upcoming Events</a></h3>
     </header>
     <p>
         Thank you to our members for supporting all our events!
