--- a/cultural_show/index.html
+++ b/cultural_show/index.html
@@ -17,7 +17,7 @@
     <!--[if lte IE 8]><link rel="stylesheet" href="../assets/css/ie8.css" /><![endif]-->
     
     <!-- Loading jquery script for nav bar, doesn't work if script at end of file --> 
-    <script src="assets/js/jquery.min.js"></script>
+    <script src="../assets/js/jquery.min.js"></script>
     <script>
         /* nav bar and side bar */
         window.onload = function() {
