--- a/membership/index.html
+++ b/membership/index.html
@@ -17,7 +17,7 @@
     <!--[if lte IE 8]><link rel="stylesheet" href="../assets/css/ie8.css" /><![endif]-->
 
     <!-- Loading jquery script for nav bar, doesn't work if script at end of file --> 
-    <script src="assets/js/jquery.min.js"></script>
+    <script src="../assets/js/jquery.min.js"></script>
     <script>
         /* nav bar and side bar */
         window.onload = function() {
@@ -90,7 +90,7 @@
                                     <!--This information should be more general and not talk about specific meetings (which should be on the upcomming like I have it-->
 										</header>
                                         <p>MORE GENERAL DESCRIPTION HERE PERHAPS.Our next open meeting for 2017-18 is on Wednesday, February 14th, from 7:00-8:30pm. Location is in Office Multicultural Students Affairs (OMSA) at 5710 South Woodlawn Avenue.</p>
-                                        <p><a class="link" href="#calendar">Find our full calendar with up-to-date events and meetings at the end of this page!</a>.</p>
+                                        <p><a class="link" href="#calendar">Find our full calendar with up-to-date events and meetings at the bottom of this page!</a></p>
 									</section>
                                     <section>
 										<header>
