--- a/membership/index.html
+++ b/membership/index.html
@@ -152,7 +152,7 @@
 										</header>
 									</section>
                                     <section id="calendar">
-                                        <iframe src="https://calendar.google.com/calendar/embed?src=olasboard%40gmail.com&ctz=America%2FChicago" style="border: 0" width="60%" height="45%" frameborder="0" scrolling="no"></iframe>
+                                        <iframe src="https://calendar.google.com/calendar/embed?src=olasboard%40gmail.com&ctz=America%2FChicago" style="border: 0" width="480" height="4270" frameborder="0" scrolling="no"></iframe>
                                     </section>
 								</article>
 							</div>
