fixed some things

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                 <div class="row 200%">
                     <div class="8u 12u(mobile)" id="content">
                         <article id="main">
-                            <header>
+                            <header id="main_header">
                                 <div id="countdown_div">
                                     <!-- testing a countdown with javascript -->
                                     <h3><a href="cultural_show/index.html">Premios OLAS Countdown:</a></h3>
@@ -147,9 +147,10 @@
                                 <!-- dynamic greeting with javascript -->
                                 <h2 id="greeting"></h2>
                                 <p>
-                                    Welcome to OLAS UChicago
+                                    Welcome to OLAS at UChicago
                                 </p>
-                                <a href="img/show/flyer.png" class="image featured"><img src="img/show/flyer.png" alt="" /></a>
+                                <p id="show">Save the date, don't miss our annual Cultural Show!</p>
+                                <a href="img/show/banner.png" class="image featured"><img src="img/show/banner.png" alt="" /></a>
                             </header>
                             <section id="story">
                                 <header>
