updated show info

--- a/cultural_show/index.html
+++ b/cultural_show/index.html
@@ -111,10 +111,25 @@
                 <div class="row 200%">
                     <div class="8u 12u(mobile)" id="content">
                         <article id="main">
+                            <a href="../img/show/banner.png" class="image featured"><img src="../img/show/banner.png" alt="" /></a>
                             <header>
                                 <h2>What is the OLAS Cultural Show?</h2>
                             </header>
                             <p>Every year OLAS hosts a cultural show to showcase Latinx culture and talent.</p>
+                            <header>
+                                <h2>Premios OLAS</h2>
+                            </header>
+                            <p>OLAS is proud to present this year's show:</p>
+                            <section id="premios">
+                                <ul>
+                                    <li id="promo1" class="show premios">
+                                        <div class="vids">
+                                            <iframe width="480" height="270" src="https://www.youtube.com/embed/Tiq8nPtSAPo" frameborder="0"   allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                                            <h3>Promo #1</h3>
+                                        </div>
+                                    </li>
+                                </ul>
+                            </section>
                             <section>
                                 <header>
                                     <h3 id="committees">Committees</h3>
