--- a/about/index.html
+++ b/about/index.html
@@ -169,7 +169,7 @@
                                         <img src="img/nylani.jpg" width="200px" />
                                         <h4>Nylani Rios</h4>
                                         <p><em>Communications Co-Chair</em></p>
-                                        <p>Nylani is a fourth year majoring in Psychology with a visual arts minor and a plan to be the next big CMO for a top notch music production company. She is originally from Chicago, raised in the infamous Pureto Rican neighborhood Humboldt Park, which has taught her to love her culture and share her pride with her fellow LatinX hermanos y hermanas. She also loves arroz con gandules.</p>
+                                        <p>Nylani is a fourth year majoring in Psychology with a visual arts minor and a plan to be the next big CMO for a top notch music production company. She is originally from Chicago, raised in the infamous Puerto Rican neighborhood Humboldt Park, which has taught her to love her culture and share her pride with her fellow LatinX hermanos y hermanas. She also loves arroz con gandules.</p>
                                         <p>nrios23@uchicago.edu</p>
                                     </li>
                                     <li id="chema" class="board">
