--- a/cultural_show/index.html
+++ b/cultural_show/index.html
@@ -163,7 +163,7 @@
                             </section>
                             <section id="board">
                                 <header>
-                                    <h3 id="gallery">Look at some pictures last year's show!</h3>
+                                    <h3 id="gallery">Look at some pictures from last year's show!</h3>
                                 </header>
                                 <ul id="photos">
                                     <li>
