--- a/side_bar.html
+++ b/side_bar.html
@@ -60,6 +60,6 @@
         </div>
     </div> 
     <footer>
-        <a href="http://www.olasuchicago.org/events/index.html#upcoming" class="button">Events page</a>
+        <a href="http://www.olasuchicago.org/events/index.html" class="button">Events page</a>
     </footer>
 </section>
