--- a/gallery/test.html
+++ b/gallery/test.html
@@ -14,7 +14,7 @@
         $(document).ready(function () {
           $(".fb-album-container").FacebookAlbumBrowser({
                 account: "olas.uchicago",
-                accessToken: "EAACEdEose0cBAPbHqipjiVZCg1mRHjnRET5femKt9SMjbDu8txPaMW8AFq0VigoZCtByqlLW63a6mblhahZBUomsnHvnvcuplZABZCee17cvd2htPbLvUEZC8ZABNj9sYnziB28MTShChMNO2ZCTmVnrWXHCoym9KZAHSMEloAZCRprWavRlOogDjYrZAP9hEONvkrketUcJUggTQZDZD",
+                accessToken: "775908159169504|cYEIsh0rs25OQQC8Ex2hXyCOut4",
                 showComments: true,
                 commentsLimit:3,
                 showAccountInfo: false,
