relinking galery page
^^

--- a/gallery/index-old.html
+++ b/gallery/index-old.html
@@ -14,9 +14,6 @@
     <!--[if lte IE 8]><script src="../assets/js/ie/html5shiv.js"></script><![endif]-->
     <link rel="stylesheet" href="../assets/css/main.css" />
     <link rel="stylesheet" href="gallery_style.css" />
-    <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-	<script type="text/javascript" src="assets/jquery.fb.albumbrowser.js"></script>
-    <link rel="stylesheet" type="text/css" href="//rawgit.com/dejanstojanovic/Facebook-Album-Browser/master/src/jquery.fb.albumbrowser.css" />
     <!--[if lte IE 8]><link rel="stylesheet" href="../assets/css/ie8.css" /><![endif]-->
 
     <!-- Loading jquery script for nav bar, doesn't work if script at end of file --> 
@@ -115,49 +112,22 @@
                     <div class="8u 12u(mobile)" id="content">
                         <article id="main">
                             <header>
-                                <h2 id="photos">Photographs</h2>
+                                <h2 id="photos">Event Photographs</h2>
                             </header>
-                            <section id="alb">
-                                <div class="fb-album-container" style="text-align: center"></div>
-                                <script type="text/javascript">
-                                    $(document).ready(function () {
-                                      $(".fb-album-container").FacebookAlbumBrowser({
-                                            account: "olas.uchicago",
-                                            accessToken: "775908159169504|cYEIsh0rs25OQQC8Ex2hXyCOut4",
-                                            showComments: true,
-                                            commentsLimit:3,
-                                            showAccountInfo: false,
-                                            showImageCount: false,
-                                            showImageText: true,
-                                            shareButton: true,
-                                            albumsPageSize: 0,
-                                            photosPageSize: 0,
-                                            skipAlbums: ["Profile Pictures", "Cover Photos", "Timeline Photos"],
-                                            lightbox: true,
-                                            photosCheckbox: false,
-                                            pluginImagesPath: "../src/",
-                                            likeButton: true,
-                                            shareButton: true,
-                                            //addThis:"ra-52638e915dd79612",
-                                            /*
-                                            photoChecked: function(photo){
-                                                console.log("PHOTO CHECKED: " + photo.id + " - " + photo.url + " - " + photo.thumb);
-                                                console.log("CHECKED PHOTOS COUNT: " + this.checkedPhotos.length);
-                                            },
-                                            photoUnchecked: function (photo) {
-                                                console.log("PHOTO UNCHECKED: " + photo.id + " - " + photo.url + " - " + photo.thumb);
-                                                console.log("CHECKED PHOTOS COUNT: " + this.checkedPhotos.length);
-                                            },
-                                            albumSelected: function (photo) {
-                                                console.log("ALBUM CLICK: " + photo.id + " - " + photo.url + " - " + photo.thumb);
-                                            },
-                                            photoSelected: function (photo) {
-                                                console.log("PHOTO CLICK: " + photo.id + " - " + photo.url + " - " + photo.thumb);
-                                            }*/
-                                        });
-
-                                    });
-                                </script>
+                            <section class="album">
+                                <ul>
+                                    <li class="show">
+                                        <div class="vids">
+                                            <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fmedia%2Fset%2F%3Fset%3Da.1479036068785351.1073741838.272947726060864%26type%3D3&width=500" width="800" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+                                        </div>
+                                    </li>
+                                </ul>
+                            </section>
+                            <header>
+                                <h2 id="photos">Event Videos</h2>
+                            </header>
+                            <section>
+                                <p>Videos will be uploaded soon!</p>
                             </section>
                         </article>
                     </div>
@@ -196,7 +166,7 @@
                         <!-- Copyright -->
                         <div class="copyright">
                             <ul class="menu">
-                                <li>&copy; OLAS. All rights reserved.</li><li>Thank you!</a></li>
+                                <li>&copy; OLAS. All rights reserved.</li><li>Thank you!</li>
                             </ul>
                         </div>
 
@@ -209,6 +179,7 @@
     </div>
 
     <!-- Scripts -->
+    <script src="../assets/js/jquery.min.js"></script>
     <script src="../assets/js/jquery.dropotron.min.js"></script>
     <script src="../assets/js/jquery.scrolly.min.js"></script>
     <script src="../assets/js/jquery.onvisible.min.js"></script>
