added gallery to cultural show and fixed some files

--- a/gallery/index.html
+++ b/gallery/index.html
@@ -117,7 +117,7 @@
                             <header>
                                 <h2 id="photos">Photographs</h2>
                             </header>
-                            <section id="alb">
+                            <section id="gallery">
                                 <div class="fb-album-container" style="text-align: center"></div>
                                 <script type="text/javascript">
                                     $(document).ready(function () {
