updated partner list

--- a/gallery/index.html
+++ b/gallery/index.html
@@ -14,7 +14,7 @@
     <!--[if lte IE 8]><script src="../assets/js/ie/html5shiv.js"></script><![endif]-->
     <link rel="stylesheet" href="../assets/css/main.css" />
     <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-	<script type="text/javascript" src="assets/jquery.fb.albumbrowser.js"></script>
+	<script type="text/javascript" src="../assets/js/jquery.fb.albumbrowser.js"></script>
     <link rel="stylesheet" type="text/css" href="//rawgit.com/dejanstojanovic/Facebook-Album-Browser/master/src/jquery.fb.albumbrowser.css" />
     <link rel="stylesheet" href="gallery_style.css" />
     <!--[if lte IE 8]><link rel="stylesheet" href="../assets/css/ie8.css" /><![endif]-->
