--- a/partnerships/index.html
+++ b/partnerships/index.html
@@ -120,11 +120,11 @@
                                 </header>
                                 <ul class="partner_list">
                                     <li id="accenture">
-                                        <img src="img/accenturelogo.jpg" width="100"> 
+                                        <a href="https://www.accenture.com/us-en/new-applied-now"><img src="img/accenturelogo.jpg" width="100"></a> 
                                         <p><a href="https://www.accenture.com/us-en/new-applied-now">Accenture</a> is leading global professional services company, providing a broad range of services and solutions in strategy, consulting, digital, technology and operations.</p>
                                     </li>
                                     <li id="google">
-                                        <img src="img/Logo_2013_Google.png" width="100"> 
+                                        <a href="https://www.google.com"><img src="img/Logo_2013_Google.png" width="100"></a>
                                         <p><a href="https://www.google.com">Google</a> is a multinational, publicly-traded organization built around the company's hugely popular search engine. Google's other enterprises include Internet analytics, cloud computing, advertising technologies, and Web app, browser and operating system development.</p>
                                     </li>
                                 </ul>
@@ -138,7 +138,7 @@
                                 <p id="no_indent">Current partners:</p>
                                 <ul class="partner_list">
                                     <li id="mural">
-                                        <img src="img/mural.jpg" width="100"> 
+                                        <a href="https://muralmagazine.squarespace.com"><img src="img/mural.jpg" width="100"></a> 
                                         <p><a href="https://muralmagazine.squarespace.com">Mural Magazine</a>: a Latin-American cultural magazine founded by OLAS members.</p>
                                     </li>
                                 </ul>
