--- a/cultural_show/index.html
+++ b/cultural_show/index.html
@@ -130,6 +130,12 @@
                                             <h3>Promo #1</h3>
                                         </div>
                                     </li>
+                                    <li id="promo2" class="show premios">
+                                        <p id="show">It's like the grammys, pero mejor!</p>
+                                        <div class="vids">
+                                            <iframe width="480" height="270" src="https://www.youtube.com/embed/iPZPx-OzhZ8" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                                        </div>
+                                    </li>
                                 </ul>
                             </section>
                             <section>
