--- a/about/index.html
+++ b/about/index.html
@@ -175,7 +175,7 @@
                                         <img src="img/chema.jpg" width="200px" />
                                         <h4>Jose Reyes</h4>
                                         <p><em>Communications Co-Chair</em></p>
-                                        <p>Jose Reyes is a second year studying Computer Science with a minor in Computational Neuroscience and    one of the best programmers OLAS has ever had!</p>
+                                        <p>Jose Reyes is a second year studying Computer Science with a minor in Computational Neuroscience and    one of the most charismatic people OLAS has ever had!</p>
                                         <p>reyesj5@uchicago.edu</p>
                                     </li>
                                     <li id="emma" class="board">
