updating tickets link

--- a/about/index.html
+++ b/about/index.html
@@ -173,7 +173,7 @@
                                     </li>
                                     <li id="chema" class="board">
                                         <img src="img/chema.jpg" width="200px" />
-                                        <h4>Jose Reyes</h4>
+                                        <h4>José Reyes</h4>
                                         <p><em>Communications Co-Chair</em></p>
                                         <p>Jose Reyes is a second year studying Computer Science with a minor in Computational Neuroscience and    one of the most charismatic people OLAS has ever had!</p>
                                         <p>reyesj5@uchicago.edu</p>
