--- a/cultural_show/index.html
+++ b/cultural_show/index.html
@@ -113,6 +113,7 @@
                 <div class="row 200%">
                     <div class="8u 12u(mobile)" id="content">
                         <article id="main">
+                            <a id="tickets" href="https://goo.gl/fwhwrw" class="button">Buy tickets</a>
                             <a href="../img/show/banner.png" class="image featured"><img src="../img/show/banner.png" alt="" /></a>
                             <header>
                                 <h2>What is the OLAS Cultural Show?</h2>
