--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@
                                 <div class="vids">
                                     <iframe width="480" height="270" src="https://www.youtube.com/embed/iPZPx-OzhZ8" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
                                 </div>
+                                <a id="tickets" href="https://goo.gl/fwhwrw" class="button">Buy your tickets!</a>
                             </header>
                             <section id="story">
                                 <header>
