--- a/index.html
+++ b/index.html
@@ -238,6 +238,17 @@
                             </p>    
                         </div>
                     </article>
+                    <article class="4u 12u(mobile) special">
+                        <a href="https://goo.gl/fwhwrw" class="image fit"><img src="http://www.olasuchicago.org/cultural_show/img/tickets.jpg" alt="Marketing" /></a>
+                        <header>
+                            <h3><a href="https://goo.gl/fwhwrw">Tickets Now on Sale!</a></h3>
+                        </header>
+                        <div class="main_events">
+                            <p class="indent">
+                                PREMIOS OLAS tickets are now on sale! Don't miss your chance to experience this amazing show, buy your tickets today! 
+                            </p>    
+                        </div>
+                    </article>
                 </div>
             </div>
             
