Adding Henry to the board.
Also updating Juan's pic

--- a/about/index.html
+++ b/about/index.html
@@ -175,7 +175,14 @@
                                         <img src="img/chema.jpg" width="200px" />
                                         <h4>José Reyes</h4>
                                         <p><em>Communications Co-Chair</em></p>
-                                        <p>Jose Reyes is a second year studying Computer Science with a minor in Computational Neuroscience and    one of the most charismatic people OLAS has ever had!</p>
+                                        <p>Jose (a.k.a Chema) is a second year studying Computer Science with a minor in Computational Neuroscience and    one of the most charismatic people OLAS has ever had!</p>
+                                        <p>reyesj5@uchicago.edu</p>
+                                    </li>
+                                    <li id="henry" class="board">
+                                        <img src="img/henry.jpg" width="200px" />
+                                        <h4>Henry J Sican</h4>
+                                        <p><em>Marketing Committee</em></p>
+                                        <p>Henry is a first year studying Computer Science with a minor in Latin American Studies</p>
                                         <p>reyesj5@uchicago.edu</p>
                                     </li>
                                     <li id="emma" class="board">
