changing josue email
^^

--- a/about/index.html
+++ b/about/index.html
@@ -183,7 +183,7 @@
                                         <h4>Henry J Sican</h4>
                                         <p><em>Marketing Committee</em></p>
                                         <p>Henry is a first year studying Computer Science with a minor in Latin American Studies</p>
-                                        <p>reyesj5@uchicago.edu</p>
+                                        <p>hjsican@uchicago.edu</p>
                                     </li>
                                     <li id="emma" class="board">
                                         <img src="img/emma.jpg" width="200px" />
